fdo#74153 : Preservation of Column Break with column_count = 0

Issue :
	1] DOCX containing column break with column_count = 0
	   was not getting preserved after RT.
	2] LO was writing column break only when column_count > 1

	Implementation :
	1] Removed check column_count > 1. So that if LO
	   encounters a column break with column_count >=0,
	   it should preserve it.
	2] Added export Unit Test case.

	Behavior after Fix :
	LO is able to preserve Column Break with
	column_count = 0.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7815

Change-Id: I29c77f27184ec5afed354be01fc68e0d3471bfee