sw/qa/extras/ooxmlexport/ooxmlexport.cxx
@@ -3027,6 +3027,17 @@ DECLARE_OOXMLEXPORT_TEST(testFdo74110,"fdo74110.docx")
     assertXPath(pXmlDoc, "/w:document/w:body/w:p[1]/w:r[1]/mc:AlternateContent/mc:Choice/w:drawing[1]/wp:inline[1]/a:graphic[1]/a:graphicData[1]/wps:wsp[1]/wps:spPr[1]/a:prstGeom[1]/a:avLst[1]/a:gd[1]",0);
 }
 
+DECLARE_OOXMLEXPORT_TEST(testColumnBreak_ColumnCountIsZero,"fdo74153.docx")
+{
+    /* fdo73545: Column Break with Column_count = 0 was not getting preserved.
+     * The <w:br w:type="column" /> was missing after roundtrip
+     */
+    xmlDocPtr pXmlDoc = parseExport("word/document.xml");
+    if (!pXmlDoc)
+        return;
+    assertXPath(pXmlDoc, "/w:document/w:body/w:p[3]/w:r[1]/w:br","type","column");
+}
+
 #endif
 
 CPPUNIT_PLUGIN_IMPLEMENT();
